[package]
name = "mli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ansi_term = { version = "0.12.1", features = ["serde"] }
clap = { version = "4.2.5", features = ["derive"] }
mpris = "2.0.0"
sysinfo = "0.29.0"

