[package]
name = "mli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["usage", "help", "std"], default-features = false}
mpris = "2.0.0"
sysinfo = {version = "0.29.0", default-features = false}
thiserror = "1.0.40"
